# postgres-15721

./: .clang-format  .gitignore  CMakeLists.txt  dodo.py  pyproject.toml
cmudb/: CMakeLists.txt
cmudb/collector/: .gitignore  collector.py
cmudb/env/: Dockerfile  README.md  apt_for_pdl.conf  docker-compose-exploration.yml  docker-compose-replication.yml  docker-compose-single.yml  docker-entrypoint.sh  packages.sh  setup_pg_bsd_indent.sh
cmudb/env/.docker/: config.json
cmudb/exploration/: README.md  data_copy.py  exploratory_daemon.py  pgnp_docker.py  sql.py  util.py
cmudb/extensions/: CMakeLists.txt
cmudb/extensions/db721_fdw/src/: db721_fdw_impl.cpp
cmudb/extensions/hutch/: .gitignore  CMakeLists.txt  Makefile  hutch_extension--0.0.1.sql  hutch_extension.control  main.c  operating_unit_codegen.c  tscout_feature_gen.py
cmudb/qss/: .gitignore  Makefile  clang_gen.py  clang_parser.py  qss--0.0.1.sql  qss.c  qss.control  qss.h  qss_explain.c  qss_features.c.template  qss_features.h.template  qss_plans.c  qss_stats_functions.c
cmudb/tscout/: README.md  clang_parser.py  collector.c  markers.c  model.py  probes.c  requirements.txt  test2.py  tscout.c  tscout.py
contrib/auto_explain/: auto_explain.c
contrib/pg_stat_statements/: pg_stat_statements.c
contrib/postgres_fdw/: postgres_fdw.c
dodos/: ci.py  hutch.py  noisepage.py  qss.py
src/backend/: Makefile
src/backend/catalog/: heap.c  pg_shdepend.c
src/backend/cmudb/: Makefile
src/backend/commands/: copyto.c  createas.c  explain.c  extension.c  matview.c  tablecmds.c  trigger.c
src/backend/executor/: execAmi.c  execIndexing.c  execMain.c  execParallel.c  execProcnode.c  execTuples.c  functions.c  instrument.c  nodeAgg.c  nodeAppend.c  nodeBitmapAnd.c  nodeBitmapHeapscan.c  nodeBitmapIndexscan.c  nodeBitmapOr.c  nodeCtescan.c  nodeCustom.c  nodeForeignscan.c  nodeFunctionscan.c  nodeGather.c  nodeGatherMerge.c  nodeGroup.c  nodeHash.c  nodeHashjoin.c  nodeIncrementalSort.c  nodeIndexonlyscan.c  nodeIndexscan.c  nodeLimit.c  nodeLockRows.c  nodeMaterial.c  nodeMemoize.c  nodeMergeAppend.c  nodeMergejoin.c  nodeModifyTable.c  nodeNamedtuplestorescan.c  nodeNestloop.c  nodeProjectSet.c  nodeRecursiveunion.c  nodeResult.c  nodeSamplescan.c  nodeSeqscan.c  (+14 more)
src/backend/partitioning/: partprune.c
src/backend/postmaster/: postmaster.c
src/backend/replication/: slot.c  slotfuncs.c  walreceiver.c  walsender.c
src/backend/tcop/: dest.c  postgres.c  pquery.c
src/backend/tscout/: Makefile  sampling.c
src/include/: Makefile  port.h
(+46 files in other folders)
